Don't show type until Typekit loads, to avoid text flicker of unstyled fonts. Changing loading order so Typekit, and css for hiding header/footer both kick in faster.

--- a/css.css
+++ b/css.css
@@ -23,6 +23,17 @@ h3 {
   margin-bottom: 22px;
 }
 
+/* Avoid Typekit flash of unstyled text */
+.wf-loading {
+  /* styles to use before Typekit is loaded */
+  visibility: hidden;
+}
+ 
+.wf-active {
+  /* styles to use after Typekit is loaded */
+  visibility: visible;
+}
+
 
 /* Go chrome-less whenever content is embedded inside an iframe */
 body.in-iframe header,  
